--- a/TriviaQuiz/src/main/res/values/strings.xml
+++ b/TriviaQuiz/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="settings">Settings Screen</string>
     <string name="game">Game Screen</string>
     <string name="scores">Scores Screen</string>
+    <string name="splash_title1">Been There</string>
+    <string name="splash_title2">Done That!</string>
+    <string name="splash_version">Version 1.0</string>
 </resources>
